# semestralna_praca_pos

./: CMakeLists.txt
kralovstva/: CMakeLists.txt  armada.c  armada.h  budova.c  budova.h  hra.c  hra.h  hrac.c  hrac.h  kralovstvo.c  kralovstvo.h  main.c  pociatocneHodnoty.txt  server.c  server.h  shm.c  shm.h  zdielane_buffere.c  zdielane_buffere.h  zdielane_data.c  zdielane_data.h  zdielane_nazvy.c  zdielane_nazvy.h
